# agents-debate

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_CN.md  pyproject.toml
examples/: aichat-sandbox-demo.md  basic_debate.py  custom_roles.py
src/debate_prd/: __init__.py
src/debate_prd/agents/: __init__.py  debater.py  moderator.py
src/debate_prd/cli/: __init__.py  event_handler.py  formatting.py  interactive.py  main.py  main_new.py  session.py  theme.py  tui.py
src/debate_prd/cli/commands/: __init__.py  base.py  config.py  help.py  presets.py  quit.py  start.py  status.py
src/debate_prd/config/: __init__.py  presets.py  prompts.py  settings.py
src/debate_prd/core/: __init__.py  clarification_moderator.py  debate_analysis.py  debate_analyzer.py  debate_executor.py  debate_loop.py  debate_points.py  debate_state.py  logger.py  prd_draft.py
src/debate_prd/core/memory/: agent_memory.py
src/debate_prd/core/messaging/: mailbox.py
src/debate_prd/core/spawn/: debater_agent.py
src/debate_prd/core/tools/: __init__.py  ask_user.py  moderator_tools.py
src/debate_prd/team/: __init__.py  debate_team.py  termination.py
tests/: test_debate_core.py
