[project]
name = "debate-prd"
version = "0.1.0"
description = "辩论式 PRD 生成系统 - 通过两个 Agent 辩论生成产品需求文档"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "zewang"}]
dependencies = [
    "openai>=1.0",
    "tiktoken>=0.5",
    "aioconsole>=0.6",
    "rich>=13.0",
    "typer>=0.9",
    "jieba>=0.42",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
debate-prd = "debate_prd.cli.main:main"
debate-prd-interactive = "debate_prd.cli.interactive:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]